Issue #26020:  Fix evaluation order for set literals